@@ -1,3 +1,8 @@
+Wed Jun 29 22:21:38 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/ossl_ocsp.c: The "reuse" behavior of d2i_ functions does
+	  not work well with OpenSSL 1.0.0t. So avoid it.
+
 Wed Jun 29 15:18:28 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* insns.def (opt_succ): optimize like r55515. (but this argument is
